brocode-rs/tui/src/chatwidget/snapshots/brocode_tui__chatwidget__tests__app_server_mcp_startup_failure_renders_warning_history.snap
---
source: tui/src/chatwidget/tests.rs
assertion_line: 11761
expression: term.backend().vt100().screen().contents()
---



⚠ MCP client for `alpha` failed to start: handshake failed
⚠ MCP startup incomplete (failed: alpha)


› Ask Brocode to do anything

  gpt-5.3-brocode default · 100% left · /tmp/project
