brocode-rs/tui/src/chatwidget/snapshots/brocode_tui__chatwidget__tests__compact_queues_user_messages_snapshot.snap
---
source: tui/src/chatwidget/tests.rs
expression: term.backend().vt100().screen().contents()
---
• Working (0s • esc to interrupt)

• Messages to be submitted at end of turn
  ↳ Steer submitted while /compact was running.

› Ask Brocode to do anything

  gpt-5.3-brocode default · 100% left · /tmp/project
